@@ -1,3 +1,9 @@
+2012-08-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug3561215.c:
+	  Fixed bug #3561215.
+
 2012-08-22 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c: Reinserted break in proper context
